# BetaTrax

./: .dockerignore  .gitignore  Dockerfile  README.md  demo_script.py  docker-compose.yml  pyproject.toml  setup_demo.py  up.py
BetaTrax/: admin.py  apps.py  email.py  models.py  tests.py  urls.py  views.py
BetaTrax/migrations/: 0001_initial.py  0002_employee_is_staff.py  0002_rename_tester_id_report_tester_id.py  0003_comment_created_at_alter_report_status.py  0003_employee_groups_employee_user_permissions.py  0004_remove_report_created_at_remove_report_updated_at_and_more.py
demo/: API.md  HTTPie.md  SERVER.md  curl.ipynb  curl.md  httpie.ipynb  requests.ipynb  requests.md
project/: settings.py  urls.py
scripts/: createsuperuser.sh  setup.sh  test.sh  up.sh
tests/: test_comment.py  test_crud.py  test_product_owner.py  test_view.py
