[project]
name = "betatrax"
version = "0.1.0"
description = "A defect report management system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "gunicorn>=25.3.0",
    "psycopg[binary]>=3.3.3",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
